# company-search

./: .gitignore  README.md  WRITEUP.md
backend/: .dockerignore  .env.example  .llm_cache.db  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py  test_portfolio_recommendations.py  test_thesis_queries.py
backend/backend/: logging_config.py  settings.py
backend/backend/db/: database.py  seed_data.json
backend/backend/es/: client.py  company_index_mapping.json  embeddings.py  filter_converter.py  fuzzy_matcher.py  index.py  index_mappings.py  operations.py  segment_indices.py
backend/backend/llm/: attribute_extractor.py  client.py  explanation_cache.py  explanation_generator.py  extraction_cache.py  portfolio_analyzer.py  query_classifier.py  query_extractor.py  query_rewriter.py  schemas.py  thesis_detector.py  thesis_expander.py
backend/backend/logic/: explainer.py  filter_merger.py  researcher.py  search.py
backend/backend/models/: __init__.py  filters.py
backend/backend/routes/: admin.py  query.py  research.py
backend/scripts/: populate_synonyms.py  reset_db.sh  seed.py  test_explanation_generator.py  test_query_classifier.py  wipe_databases.py
backend/tests/: conftest.py
backend/tests/es/: __init__.py  test_business_model_synonyms.py  test_filter_converter.py  test_fuzzy_matcher.py  test_industry_synonyms.py  test_operations.py
backend/tests/llm/: test_attribute_extractor.py  test_client.py  test_extraction_cache.py
backend/tests/logic/: __init__.py  test_filter_merger.py  test_search.py
backend/tests/models/: test_filters.py
(+44 files in other folders)
