[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
debugpy = "^1.8.2"
randomname = "^0.2.1"
elasticsearch = "^8.15.0"
sentence-transformers = "^3.3.1"
pydantic-settings = "^2.11.0"
openai = "^1.54.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "B020", "PLW2901", "UP006"]
ignore = ["E731", "E711", "E712"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing --cov-report=html"